# prompt-engineering-lab

./: Prompt Engineering Lab - tech group pt II - ENG.html  README.md  import_to_db.py  project_setup.py
app/: endpoints.py
group-task-skeleton/: LOCAL_GIT_SERVER_INSTRUCTIONS.md  README.md  app.py  import_to_db.py  project_setup.py  pyproject.toml  skeleton.txt
group-task-skeleton/OtwartyWroclaw_rozklad_jazdy_GTFS/: calendar.txt  control_stops.txt  feed_info.txt  routes.txt  stops.txt  trips.txt  variants.txt
group-task-skeleton/doc/: README.md
group-task-skeleton/frontend/: index.html  script.js
group-task-skeleton/src/public_transport_api/: db_models.py  departures.py  exceptions.py  main.py  models.py  trips.py
group-task-skeleton/src/public_transport_api/controllers/: departures_controller.py  trips_controller.py
group-task-skeleton/src/public_transport_api/services/: departures_service.py  trips_service.py
group-task-skeleton/tests/: test_import.py  test_project_setup.py
group-task-skeleton/tests/public_transport_api/services/: test_departures_services.py  test_trips_service.py
group-task-skeleton/tools/: concat-project.sh  requirements.txt  scoring.py  sqlite_schema_fix.sql  test.http
tests/: test_import.py  test_project_setup.py
