[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-transport-api"
version = "0.1.0"
description = "A Flask API for querying public transport information for Wrocław."
requires-python = ">=3.9"
dependencies = [
    "Flask >= 2.0",
    "geopy >= 2.0",
]

[tool.setuptools.packages.find]
where = ["src"]
